--- a/src/ViewportViewExtension/ViewportViewExtension/Resources/index.html
+++ b/src/ViewportViewExtension/ViewportViewExtension/Resources/index.html
@@ -211,7 +211,7 @@
 			    scene.add(axisHelper);
 			}
 
-            // TODO this needs serious cleanup
+            // TODO this needs serious cleanup - possible to handle most of this on the C# side?
             // Helper function to build THREE objects from render package json
 			function renderDynamoMesh(groupData) {
 
