prevent material visibility from getting out of sync

--- a/src/ViewportViewExtension/ViewportViewExtension/Resources/index.html
+++ b/src/ViewportViewExtension/ViewportViewExtension/Resources/index.html
@@ -23,6 +23,8 @@
 
             // MATERIALS //
             let material, wireframeMaterial;
+            let materialVisibility = true;
+            let wireframeMaterialVisibility = true;
 
             // MOUSE //
             let mouse = new THREE.Vector2()
